--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,6 @@
 <footer class="py-5 bg-dark">
   <div class="container">
     <p class="m-0 text-center text-white">Copyright &copy; Jacob Luthier 2019</p>
+    <p class="text-white text-center">by Philiphe Kramer</p>
   </div>
 </footer>
